# Python-OOP

./: README.md  pyproject.toml
src/: Aula18-08-2025.ipynb  Aula19-08-2025.ipynb
src/Aulas/: Aula18-08-2025.ipynb  Aula19-08-2025.ipynb  Aula20-08-25.ipynb  Aula21-08-2025.ipynb  Aula22-08-2025.ipynb  Aula25-08-2025.ipynb  Aula26-08-2025.ipynb  Aula28-08-2025.ipynb  circulo.py  gerenciador_tarefas.py  mod-sys.py  my_singleton.py
src/files/: 01-teste.txt  02-exemplo.txt  04-notas.txt  05-fatoriais.txt  05-produtos.csv  11-filmes.json  exemplo.txt  filmes.csv  filmes_dict.csv  notas.csv
src/python_oop/: Aula18-08.ipynb
