[project]
name = "python-oop"
version = "0.1.0"
description = ""
authors = [
    {name = "Juliane Coutinho",email = "juliane.coutinho734@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel (>=6.30.1,<7.0.0)"
]

[tool.poetry]
packages = [{include = "python_oop", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
